# sap-etl

./: .gitignore  CMakeLists.txt  README.md
src/: main.cpp
src/app/: application.cpp  application.hpp
src/checkpoint/: checkpoint_store.cpp  checkpoint_store.hpp
src/clickhouse/: clickhouse_client.cpp  clickhouse_client.hpp
src/config/: cli_parser.cpp  cli_parser.hpp
src/http/: http_client.cpp  http_client.hpp
src/load/: loader.hpp  qlever_loader.cpp  qlever_loader.hpp  ttl_loader.cpp  ttl_loader.hpp
src/model/: selection.cpp  selection.hpp  types.hpp
src/source/: clickhouse_jetstreamer_source.cpp  clickhouse_jetstreamer_source.hpp  source.hpp
src/transform/: ontology_mapper.cpp  ontology_mapper.hpp
src/util/: filesystem.cpp  filesystem.hpp  strings.cpp  strings.hpp
tests/: test_cli_parser.cpp  test_framework.hpp  test_main.cpp  test_ontology_mapper.cpp  test_selection.cpp
